--- a/index.css
+++ b/index.css
@@ -412,7 +412,7 @@ body:not(.user-is-tabbing) a:focus {
 .header {
     background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
         url('./images/head.webp');
-    height: 100vh;
+    height: 120vh;
     background-size: contain;
     background-position: center;
     background-attachment: fixed;
@@ -523,7 +523,6 @@ body:not(.user-is-tabbing) a:focus {
 @media(max-width: 900px) {
     .edu__box {
         align-items: initial;
-        flex-direction: column-reverse;
     }
 }
 
@@ -534,49 +533,6 @@ body:not(.user-is-tabbing) a:focus {
 @media(max-width: 500px) {
     .edu__box:not(:last-child) {
         margin-bottom: 10rem;
-    }
-}
-
-.edu__links {
-    display: flex;
-    align-items: center;
-}
-
-.edu__text {
-    flex: 0 0 30%;
-}
-
-.edu__list {
-    /* list-style-type: square; */
-    list-style-position: inside;
-    margin-bottom: var(--gutter-normal);
-}
-
-.edu__code {
-    display: block;
-    height: 3rem;
-    margin-left: var(--gutter-normal);
-    transition: all .3s;
-}
-
-.edu__code:hover {
-    transform: scale(1.2);
-}
-
-.edu__image-box {
-    margin-bottom: var(--gutter-normal);
-}
-
-@media(min-width: 901px) {
-    .edu__image-box {
-        flex: 0.3;
-        margin: 0 0 0 10rem;
-    }
-}
-
-@media(max-width: 900px) {
-    .edu__code {
-        height: 4rem;
     }
 }
 
@@ -606,6 +562,10 @@ body:not(.user-is-tabbing) a:focus {
     }
 }
 
+/* --------------------------------------- */
+/* ----- Skills ----- */
+/* --------------------------------------- */
+
 .square-container {
   display: flex;
   flex-wrap: wrap;
@@ -614,8 +574,9 @@ body:not(.user-is-tabbing) a:focus {
 .square {
   position: relative;
   flex-basis: calc(8% - 10px);
-  margin: 5px;
+  margin: 0px;
   box-sizing: border-box;
+  width: 50%;
 }
 
 .square::before {
@@ -629,6 +590,17 @@ body:not(.user-is-tabbing) a:focus {
   top: 0; left: 0;
   height: 100%;
   width: 100%;
+}
+
+#grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-gap: 1px;
+}
+
+#grid > div {
+    padding: .1em;
+    text-align: center;
 }
 
 /* --------------------------------------- */
